<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:title="@string/child_name"
        android:key="@string/pref_child_name_key"
        android:defaultValue="@string/pref_child_name_default"
        android:inputType="text"
        android:singleLine="true"/>
    <ListPreference
        android:title="@string/gender"
        android:key="@string/pref_child_gender_key"
        android:defaultValue="@string/pref_child_gender_male"
        android:entryValues="@array/pref_child_gender_values"
        android:entries="@array/pref_child_gender_options"/>

    <Preference
        android:key="@string/pref_child_birthdate_key"
        android:summary="Updated the birthdate"
        android:title="@string/birth_date" />

</PreferenceScreen>