<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.termproject.familyprotector.choosemode"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_choose_mode"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:textColor="#010101"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/btn_parent_mode"
        android:id="@+id/button_parent_mode"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:layout_marginTop="40dp"
        android:textColor="#010101"
        android:textSize="25sp"
        android:layout_gravity="center"/>



    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/btn_child_mode"
        android:id="@+id/button_child_mode"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp" />





</LinearLayout>
