<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.termproject.familyprotector.WelcomePageTutorial">

    <android.support.v4.view.ViewPager
        android:id="@+id/welcome_pager_introduction"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:listitem="@layout/pager_item" />

    <RelativeLayout
        android:id="@+id/welcome_view_pager_indicator"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/viewPagerCountDots"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="42dip"
            android:layout_height="42dip"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dip"
            android:background="@drawable/btn_round_semitransperant"
            android:src="@mipmap/ic_navigation_arrow_forward" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="150dip"
        android:layout_height="60dip"
        android:text="@string/btn_get_started_with_register"
        android:textColor="@color/white"
        android:layout_above="@+id/text_view_or"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/text_view_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_or"
        android:layout_above="@+id/text_view_tutorial"
        android:textSize="18sp"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/text_view_tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_tutorial_link"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        />

</RelativeLayout>
